Release history for datenstrahler

v16.03  2016-03-13
  [Added]
  - Parameter "-r" can trigger an automatic reload after $n seconds.

v15.09  2015-09-01
  [Added]
  - Initial release.
  - Show a web page in a window.
  - Manpage.