@@ -1,5 +1,10 @@
 Release history for datenstrahler
 
+next
+  [Added]
+  - Parameter "-d" to bypass the window manager, a.k.a "pseudo desktop
+    window".
+
 v16.03  2016-03-13
   [Added]
   - Parameter "-r" can trigger an automatic reload after $n seconds.
